src/css/alternate.css
@font-face {
    font-family: 'antro-bold';
    src: url('/dist/assets/fonts/Antro_Vectra_Bolder.otf');
}
@import url('https://fonts.googleapis.com/css?family=Montserrat:600,600i|Roboto');
:root {
    --card-dark-dark-color: #3b2019; 
	--card-dark-light-color: #351f17;
	--card-light-light-color: #fbc382;
	--card-light-dark-color: #f8a67a;
    --second-color: #fac27f; 
	--third-color: #f68271; 
    --fourth-color: #61412e;
    font-family: 'Montserrat','Roboto';
    color: var(--card-light-light-color);
}
* {
    overflow: hidden;
}
html, body{
    width: 100%;
    height: 100vh;
    background: repeating-linear-gradient(
		90deg,
		var(--card-dark-dark-color) 4px,
		var(--card-dark-dark-color) 8px,
		var(--card-dark-light-color) 6px,
		var(--card-dark-light-color) 11px
    );
}
.grid-wrapper{
    display: grid;
    grid-auto-rows: min-content;
    margin: 0 1rem;
    padding: 0 .5rem;
    height: 100%;
    box-shadow: 0 0 0 1100px;
    justify-items: center;
}
.top-text{
    font-size: 1.1em;
    text-align: center;
}
.top-text *{
    margin-bottom: 0;
}
.logo-landing-page{
    background: url('/dist/assets/img/logo.png') no-repeat center;
    background-size: contain;
    width: 100%;
    height: 35vh;
    margin-top: -10px;
}
.bottom-text{
    font-family: antro-bold;
    text-align: center;
    font-size: 2em;
    margin-top: -2.8rem;
}
#mc_embed_signup_scroll{
    display: grid;
    text-align: justify;
    padding: 0 0;
    font-size: 0.8em;
}
#mc_embed_signup_scroll > * {
    margin: .5rem 0;
}
#mc_embed_signup_scroll > label {
    margin: 0;
}
#mc-embedded-subscribe-form input[type=email]{
    padding: .3rem;
    border-radius: 2px;
    outline: none;
    border: none;
    background-color: white;
    color: #696969;
}
#mc-embedded-subscribe-form input[type=email]:hover{
    background-color: white;
}
#mc-embedded-subscribe-form input[type=submit]{
    width: fit-content;
    justify-self: end;
    padding: .4rem;
    color: var(--card-dark-light-color);
	background-color: var(--card-light-light-color);
	border: none;
    width: fit-content;
    outline: 20px;
    border-radius: 2px;
	transition: all 0.3s ease-in-out;
}
#mc-embedded-subscribe-form input[type=submit]:hover{
	box-shadow: inset 0px 0px 10px var(--card-dark-dark-color);
	color: white;
}
#mergeRow-gdpr {
    margin: 0;
}
#mc-embedded-subscribe-form .mc_fieldset{
    border:none;
    min-height: 0px;
    padding-bottom:0px;
    font-size: 0.8em;
}
.tooltip {
    /* position: relative; */
    display: inline-block;
    font-size: 0.8em;
}
/* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    opacity: 0;
    width: 80vw;
    background-color: #fff;
    color: #555;
    text-align: justify;
    padding: 5px 10px;
    line-height: 1.3em;
    border-radius: 6px;
    /* Position the tooltip text */
    position: absolute;
    margin-top: 5px;
    z-index: 1;
    /* Fade in tooltip */
    opacity: 0;
    transition: opacity 0.3s;
}
/* .tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    bottom: 100%;
    left: 20%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent #fff transparent;
} */
.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}
.stripe{
    top: 0;
    position: absolute;
    width: 100%;
    height: 100vh;
    background-color: var(--third-color);
	background-image: 
	radial-gradient(
		var(--card-dark-light-color) 17%,
		transparent 25%
	),
	radial-gradient(
		var(--card-dark-light-color) 17%,
		transparent 25%
	);
    background-size: 10px 17px;
    background-position: 0 12px,55px 32.5px;
    z-index: 99999;
    overflow: hidden
}
.stripe-left{
    left: -95%;
}
.stripe-right{
    right: -95%;
}
.social-media{
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 1em 0;
    justify-items: center;
}
.social-media a{
    margin: 0 4rem;
}
.fb-logo, .ig-logo{
    width: 50px;
    height: 50px;
    background-size: contain !important;
}
.fb-logo{
    background: url('/dist/assets/img/fb.png') no-repeat center;
    height: 45px;
    align-self: center;
    border-radius: 5px;
}
.ig-logo{
    background: url('/dist/assets/img/ig.png') no-repeat center;
}

@media (min-width: 576px) {
    .grid-wrapper{
        margin: 0px 1.5rem;
    }
    .top-text {
        font-size: 1.5em;
    }
    .social-media{
        margin: 3rem 0rem;
    }
    #mc_embed_signup{
        font-size: 1.3em;
        max-width: 640px;
    }
    #mc-embedded-subscribe-form input[type=email]{
        margin: 1rem 0;
    }
    .fb-logo, .ig-logo{
        width: 75px;
    }
    .fb-logo{
        height: 70px;
    }
    .ig-logo{
        height: 75px;
        margin-top: -1px;
    }
    .logo-landing-page {
        height: 45vh;
    }
    .tooltip .tooltiptext {
        max-width: 430px;
    }    
    .bottom-text {
        font-size: 3.5em;
        margin-top: -3.8rem;
    }
}

/* Medium devices tablets, 768px and up */
@media (min-width: 768px) {
    .top-text{
        margin: 1rem 0rem;
    }
    #mc_embed_signup_scroll{
        font-size: 1em;
    }
    .logo-landing-page {
        height: 50vh;
        margin-top: -35px;
    }
    .bottom-text {
        font-size: 4.5em;
        margin-top: -6.8rem;
    }
}

/* Large devices desktops, 992px and up */
@media (min-width: 992px) {
    .grid-wrapper {
        margin: 0 2rem;
    }
    .top-text {
        font-size: 2.2em
    }
    .social-media{
        margin: 2rem 0;
    }
    #mc_embed_signup_scroll {
        font-size: 1.2em;
    }
    #mc_embed_signup_scroll > a {
        text-align: center;
    }
    #mc-embedded-subscribe-form input[type=email] {
        margin: 1.5rem 0;
    }
    #mc-embedded-subscribe-form input[type=submit]{
        font-size: .8em;
    }
    .logo-landing-page {
        margin-top: -65px;
    }
    .bottom-text {
        font-size: 5em;
        margin-top: -8.8rem;
    }
}

/* Extra large devices large desktops, 1200px and up */
@media (min-width: 1200px) {

}

